samples/_failures_safe/1761243676_f995ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f6b98beb.c: In function ‘main’:
./samples/SAFE/__tmp_f6b98beb.c:144:45: error: missing terminating ' character
  144 |     if (len > 0 && input_buffer[len - 1] == '\n
      |                                             ^~~
./samples/SAFE/__tmp_f6b98beb.c:144:5: error: expected expression at end of input
  144 |     if (len > 0 && input_buffer[len - 1] == '\n
      |     ^~
./samples/SAFE/__tmp_f6b98beb.c:144:5: error: expected declaration or statement at end of input
